syntax = "proto3";

import "google/protobuf/field_mask.proto";

option java_multiple_files = true;
option java_package = "io.grpc.examples.routeguide";
option java_outer_classname = "RouteGuideProto";

package routeguide;

// RouteGuide service provides geographical feature lookup functionality
service RouteGuide {
	// Simple RPC that obtains the feature at a given position.
	rpc GetFeature(GetFeatureRequest) returns (Feature) {}

  // Server-side RPC. Input is rectangle and returns a stream
  // of features with rectangle
  rpc ListFeatures(Rectangle) returns (stream Feature){}

  // Client-side stream. Input is a stream of points and output
  // is summary of the route
  rpc RecordRoute(stream Point) returns (RouteSummary) {}

}

// Points are represented as latitude-longitude pairs in the E7 representation
message Point {
  int32 latitude = 1;
  int32 longitude = 2;
}

// A latitude-longitude rectangle, represented as two diagonally opposite
// points "lo" and "hi".
message Rectangle {
  Point lo = 1;
  Point hi = 2;
}

// A feature names something at a given point.
message Feature {
  string name = 1;
  Point location = 2;
}

message FeatureDatabase {
  repeated Feature feature = 1;
}

message RouteSummary {
  // number of points visited
  int32 point_count = 1;
  // number of known features visited
  int32 feature_count = 2;
}


message GetFeatureRequest {
  Point point = 1;
  google.protobuf.FieldMask field_mask = 2;
}

